# DualArm_control

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
config/: ArmHand.yaml  DualArm.yaml  DualArmHand.yaml
docs/: DualArm.pptx  ~$DualArm.pptx
img/: README.md
include/: RobotConfig.h  Robot_Control.h  Robot_Task.hpp  main.h
include/NullControl/: NullControl.cpp  NullControl.hpp  NullTask.hpp
include/Simulator/: Robot_Simulate.cpp  Robot_Simulate.hpp  Robot_Simulate_backup.cpp  Robot_Simulate_backup.hpp
include/SplineLibs/: Bezier Curve.h  Clamped B-Spline.h  CommUtil.h  Cubic Hermite Spline.h  CubicSpline.h  Splines.h
include/Trajectory/: JointTrajectory.h
libraries/: README.md
log/: lEE_d.py  lEE_d_xy.py
log/data/: lEE_d.csv
model/: README.md
model/KIST_Arm-Hand/: Arm-Hand.xml
model/KIST_Arm-Hand/Meshes/: Hand_LF1J1.STL  Hand_LF1J2.STL  Hand_LF1J4.STL  Hand_LF2J1.STL  Hand_LF2J2.STL  Hand_LF2J3.STL  Hand_LF2J4.STL  Hand_LF3J3.STL  Hand_LT4.STL  Hand_RF1J2.STL  Hand_RF1J3.STL  Hand_RF1J4.STL  Hand_RF2J1.STL  Hand_RF2J2.STL  Hand_RF2J4.STL  Hand_RF3J1.STL  Hand_RF3J3.STL  Hand_RT3.STL  Hand_RT4.STL  RArmJ3_Link.STL  base_link.STL
model/KIST_DualArm/: KIST DualArm.xml
model/KIST_DualArm-Hand/: KIST DualArm-Hand.org.xml  KIST DualArm-Hand.urdf  KIST DualArm-Hand.xml  KIST DualArm-Hand_w_slider.xml  scene.xml
model/KIST_Hand/: KIST-Hand.xml
model/KIST_Hand/Meshes/: Hand_LF1J3.STL  Hand_LF3J1.STL  Hand_LF3J2.STL  Hand_LF3J4.STL  Hand_LT1.STL  Hand_LT2.STL  Hand_LT3.STL  Hand_RF1J1.STL  Hand_RF2J3.STL  Hand_RF3J2.STL  Hand_RF3J4.STL  Hand_RT1.STL  Hand_RT2.STL  LArmJ3_Link.STL  LArmJ5_Link.STL  LArmJ6_Link.STL  RArmJ5_Link.STL  RArmJ6_Link.STL
model/YORI/: yori.xml
model/YORI/Meshes/: clavicle.stl  toolchanger_left.stl  upperarm_left.stl
model/YORI/Meshes(offline)/: clavicle.stl  toolchanger_left.stl  upperarm_left.stl  upperarm_right.stl
model/YORI/yori_description/: package.xml  setup.cfg  setup.py
model/YORI/yori_description/config/: yori_controller_effort.yaml  yori_controller_position.yaml  yori_controller_trajectory.yaml
model/YORI/yori_description/launch/: yori_description.launch.py  yori_gazebo_controller(TODO).launch.py  yori_gazebo_effort.launch.py  yori_gazebo_position.launch.py  yori_gazebo_trajectory.launch.py
model/YORI/yori_description/meshes/yori/: clavicle.dae  toolchanger_left.dae
model/YORI/yori_description/rviz/: yori_rviz.rviz
model/YORI/yori_description/urdf/: yori.xacro(TODO:yori_gazebo_controller).urdf  yori_effort.xacro.urdf  yori_gazebo.xacro  yori_position.xacro.urdf  yori_rviz.urdf  yori_trajectory.xacro.urdf  yori_urdf.xacro
model/YORI/yori_description/yori_description/: joint_position_publisher_test.py
src/: Robot_Control.cpp  main.cpp
