<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yori_description</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="donghunnoh@gmail.com">donghun</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>

  <build_depend>control_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- <exec_depend>joint_state_controller</exec_depend> -->
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>gazebo_ros2</exec_depend>
  <exec_depend>hardware_interface</exec_depend>

  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>position_controller</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
